--- a/blackjack/blackjack.css
+++ b/blackjack/blackjack.css
@@ -1,6 +1,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-image: url("background/background.jpg");
+    //background-image: url("table.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 #dealer-cards img {
@@ -16,18 +20,29 @@ body {
 }
 
 #hit {
+    background-color: lightgreen;
     width: 100px;
     height: 50px;
     font-size: 20px;
+    border: none;
+    cursor: pointer;
 }
 
 #stay {
+    background-color: lightgreen;
     width: 100px;
     height: 50px;
     font-size: 20px;
+    border: none;
+    cursor: pointer;
+
 }
 #again{
+    background-color: lightgreen;
     width: 100px;
     height: 25px;
     font-size: 15px;
+    border: none;
+    cursor: pointer;
 }
+
