--- a/blackjack/blackjack.css
+++ b/blackjack/blackjack.css
@@ -1,8 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
-    background-image: url("background/background.jpg");
-    //background-image: url("table.jpg");
+    background-color: darkkhaki;
     background-size: cover;
     background-repeat: no-repeat;
 }
